--- a/exploding_arrows/src/main/resources/META-INF/mods.toml
+++ b/exploding_arrows/src/main/resources/META-INF/mods.toml
@@ -15,13 +15,13 @@ license = "MIT"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId = "mcmanure" #mandatory
+modId = "exploding_arrows" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
 version = "1.18.1-1.0" #mandatory
 # A display name for the mod
-displayName = "MC Manure" #mandatory
+displayName = "Exploding Arrows" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
@@ -34,5 +34,5 @@ credits = "Inspired by the TechVision YouTube series on modding" #optional
 authors = "NJSwede" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description = '''
-Adds animal manure that can be used as fertilizer and fuel.
+Enchantment that makes arrows explode.
 '''
