--- a/exploding_arrows/build.gradle
+++ b/exploding_arrows/build.gradle
@@ -14,8 +14,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.18.1-1.0'
-group = 'nu.rydin.exploding_arrows' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'exploding_arrows'
+group = 'nu.rydin.enchante' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'enchante'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
